--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>{{ person.username }}의 프로필 페이지</h1>
+{% extends 'base.html' %}
+{% block content %}
+  <h1 class="text-center mt-5" style="color: orange;">{{ person.username }}님의 프로필 페이지</h1>
 
-  <div class="">
+  <div class="container-fluid d-flex justify-content-center">
     <p class="">이미지 표시</p>
     {% if person.image %}
     <img src="{{ person.image.url }}" alt="" class="">
@@ -18,28 +11,67 @@
     {% endif %}
   </div>
 
-  <div>
+  <div class="container-fluid d-flex justify-content-center">
     팔로잉 : {{ person.followings.all|length }} / 팔로워 : {{ person.followers.all|length }}
   </div>
   
   <hr>
-  {% comment %} 여기서 어떤 식당의 리뷰인지 식당도 나오면 좋을듯 {% endcomment %}
-  <h3>{{ person.username }}가 작성한 모든 리뷰</h3>
-  {% for review in person.review_set.all %}
-  <div>{{ review.content }}</div>
-  {% endfor %}
+  
+  <h1 class="text-center mt-5 mb-5" style="color: orange; ">{{ person.username }}님의 리뷰</h1>
+  <table class="table table-hover mx-2">
+    <thead>
+      <tr>
+        <th scope="col">리뷰 내용</th>
+        <th scope="col">리뷰 이미지</th>
+        <th scope="col">내가 남긴 가게 점수</th>
+        <th scope="col">리뷰 작성 날짜</th>
+      </tr>
+    </thead>
+    <tbody>
+     
+      {% for review in person.review_set.all %}
+      <tr>
+        <td href="">{{ review.content }}</td>
+        <td>
+        {% if store.image %}
+        <img src="{{ review.image.url }}" alt="Thumbnail Image">
+        {% else %}
+        <img src="" alt="No Image">
+        {% endif %}
+        </td>
+        <td>{{ review.rating }}</td>
+        <td>{{ review.created_at }}</td>
+        </tr>
+      {% endfor %}
+
+    </tbody>
+  </table>
   
   <hr>
   
-  <h3>{{ person.username }}가 좋아요를 누른 모든 게시글</h3>
-  {% for article in person.like_articles.all %}
-  <div>{{ article.title }}</div>
+  <h1 class="text-center mt-5 mb-5" style="color: orange;">{{ person.username }}가 좋아요를 누른 모든 게시글</h1>
+  <div class="row">
+  {% for store in person.like_stores.all %}
+    <div class="col mt-5">
+      <div class="container-fluid d-flex">
+        <div class="card" style="width: 27rem;">
+          <img src="#" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title text-center">{{ store.name }}</h1>
+            <p class="card-text text-center">{{ store.address }}</p>
+            <p class="card-text text-center">{{store.rating_avg}}</p>
+            <p class="card-text text-center">{{ store.content }}</p>
+            <div class="container-fluid d-flex justify-content-end">
+              <a href="#" class="btn btn-primary">해당 가게 보기</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   {% endfor %}
+  </div>
 
-  {% comment %} 가고싶다 별표한 식당 {% endcomment %}
-  {% for review in person.like_stores.all %}
-    {{ review.name }}
-  {% endfor %}
+
 
 
   {% comment %} 팔로우 언팔로우 {% endcomment %}
@@ -56,6 +88,4 @@
     </div>
   {% endif %}  
 
-
-</body>
-</html>
+  {% endblock content %}
