--- a/stores/templates/stores/index.html
+++ b/stores/templates/stores/index.html
@@ -6,15 +6,16 @@
 <div class="container-fluid" style="padding: 0;">
     <header class="d-flex justify-content-center align-items-center">
         <div class="container-fluid bg-image" style="background-image: url('https://d2v80xjmx68n4w.cloudfront.net/gigs/fPoZ31584321311.jpg'); width: 100%;">
-            <h1 class="title text-light text-center mt-5">솔직한 리뷰, 믿을 수 있는 평점!</h1>
-            <h1 class="title text-light text-center">망고플레이트</h1>
+            <h1 class="title text-light text-center mt-5" style="font-size: larger;">솔직한 리뷰, 믿을 수 있는 평점!</h1>
+            <h1 class="title text-light text-center" style="font-size: larger;">망고플레이트</h1>
             <div class="container-fluid d-flex justify-content-center mb-5">
-                <form action="https://search.naver.com/search.naver" method="GET">
+                <form action="{% url 'stores:search' %}" method="POST">
+                    {% csrf_token %}       
                     <div class="input-group mt-5">  
                         <mx-auto>
-                            <input name="query" type="text" class="form-control" placeholder="지역, 식당 또는 음식" aria-label="search" aria-describedby="button-addon2" style="width: 30rem; height: 3rem;">
+                            <input name="search" type="search" class="form-control" placeholder="지역, 식당 또는 음식" aria-label="search" aria-describedby="button-addon2" style="width: 30rem; height: 3rem; font-size: xx-large;">
                         </mx-auto>  
-                        <button class="btn btn-warning" type="submit" id="button-addon2" style="width: 5rem;">검색</button>   
+                        <button class="btn btn-warning" type="submit" id="button-addon2" style="width: 5rem; font-size: x-large;">검색</button>   
                     </div>  
                 </form>  
             </div>  
