--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -8,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" href="{% static '25-27s-logo.png' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>
       {% block title %}
       {% endblock title %}
@@ -31,6 +34,7 @@
       a {
         text-decoration: none;
       }
+
     </style>
   </head>
   <body>
@@ -97,12 +101,8 @@
       </div>
     </header>
       
-      
-
-        
-        {% block content %}
-
-      {% endblock content %}
+     
+    {% block content %}{% endblock content %}
     
 
     
@@ -110,8 +110,6 @@
    
   </div>
   </body>
-  {% block script %}
-
-  {% endblock script %}
+  {% block script %}{% endblock script %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
