--- a/reviews/templates/reviews/update.html
+++ b/reviews/templates/reviews/update.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div>
   <h2>리뷰 수정</h2>
-  <form action="{% url 'reviews:update' review.store.pk review.pk %}" method="POST" enctype="multipart/form-data">
+  <form action="{% url 'reviews:update' review.pk %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="저장">
