--- a/stores/templates/stores/detail.html
+++ b/stores/templates/stores/detail.html
@@ -98,7 +98,7 @@
                           </div>
                           <div class="col">
                             <div class="container-fluid">
-                              <p>{{ review.created_at }}</p>
+                              <p>{{ review.created_string }}</p>
                             </div>
                             <div class="container-fluid">
                               <p>{{ review.content }}</p>
