--- a/stores/templates/stores/detail.html
+++ b/stores/templates/stores/detail.html
@@ -92,11 +92,13 @@
                       <div class="container-fluid d-flex align-items-center">
                         <div class="row">
                           <div class="col text-center">
-                            {% if review.user.image %}
-                              <img src="{{ review.user.image.url }}" class="rounded-circle" style="width: 50px;" alt="profile_img">
-                            {% else %}
-                              <img src="{% static 'profile_no_image.png' %}" class="rounded-circle" style="width: 50px;" alt="profile_no_image">
-                            {% endif %}
+                            <a href="{% url 'accounts:profile' review.user %}">
+                              {% if review.user.image %}
+                                <img src="{{ review.user.image.url }}" class="rounded-circle" style="width: 50px;" alt="profile_img">
+                              {% else %}
+                                <img src="{% static 'profile_no_image.png' %}" class="rounded-circle" style="width: 50px;" alt="profile_no_image">
+                              {% endif %}
+                            </a>
                             <p class="align-middle">{{ review.user }}</p>
                           </div>
                           <div class="col">
@@ -145,7 +147,7 @@
                         <div class="text-center">별점 : {{ review.rate_to_star }}</div>
                       </div>
                     </div>
-                    {% comment %} 리뷰 내용, 리뷰 이미지 {% endcomment %}
+                    {% comment %} 리뷰 수정, 삭제 버튼 {% endcomment %}
                     {% if request.user == review.user %}
                     <div class="d-flex justify-content-end">
                       <a href="{% url 'reviews:update' review.pk %}" class="btn btn-outline-primary mt-2" style="width: 3rem; height: 2rem;">수정</a>
@@ -154,7 +156,7 @@
                         <input type="submit" class="btn btn-outline-danger" value="삭제" style="width: 3rem; height: 2rem;">
                       </form>
                     </div>
-                  {% endif %}
+                    {% endif %}
                   </div>
                   <hr>
                 {% endfor %}
