Create/stores/category

--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
       </div>
     </header>
       
-     
+    <a href="{% url 'stores:category' '일식' %}">카테고리로 이동</a>
     {% block content %}{% endblock content %}
     
 
