--- a/stores/templates/stores/update.html
+++ b/stores/templates/stores/update.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
 
-{% block title %} 25 & 27 - 가게 정보 수정 {% endblock title %}
+{% block title %}- 가게 정보 수정{% endblock title %}
 
 
 {% block content %}
-  
-  <h1>Update</h1>
 
-  <form action="{% url 'stores:update' store.pk %}" method="post" class="" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">가게 정보 수정</button>
-  </form>
+  <section class="container-fluid my-3">
+    <h1 class="fw-bold ms-3">가게 정보 수정</h1>
+  
+    <form action="{% url 'stores:create' %}" method="post" class="ms-3 stores-create-input" enctype="multipart/form-data">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary fs-4 py-0">정보 수정</button>
+    </form>
+  </section>
 
 {% endblock content %}
