--- a/stores/templates/stores/search.html
+++ b/stores/templates/stores/search.html
@@ -1,16 +1,36 @@
 {% extends 'base.html' %}      
 {% block content %}
-<div class="container-fluid d-flex justify-content-center mt-5">
-    {% if searched %}        
-    <h1 class="mt-5"> 검색하신 {{ search }} 맛집 정보입니다. </h1>
+<div class="container-fluid mt-5">
+    {% if search %}
+    <header>
+        <h1 class="mt-5 text-center"> 검색하신 "{{ search }}" 맛집 정보입니다. </h1>
+    </header>  
     <br>
-    {% for store in store %}       
-            {{ store.name }} <br>
-            {{ store.address }} <br>
-            {{ store.category }} <br>
-    {% endfor %}
-    {% else %}        
-    <h1> 찾고 있는 맛집 정보가 존재하지 않습니다. </h1>
-    {% endif %}
+    <main>
+    <div class="container">
+        <div class="row">
+            {% for store in store %}
+            <div class="col">
+                {% if store.image %}
+                <div>   
+                        <a href="{% url 'stores:detail' store.pk %}">
+                        <img src="{{ store.image.url }}" alt="Thumbnail Image" style="width: 20rem;">
+                        </a>
+                        {% else %}
+                        <img src="" alt="No Image">
+                    {% endif %}
+                    <div>
+                        <a href="{% url 'stores:detail' store.pk %}">{{ store.name }}</a>
+                        <p>{{ store.address }} - {{ store.category }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>       
+            {% else %}        
+            <h1> 찾고 있는 맛집 정보가 존재하지 않습니다. </h1>
+            {% endif %}
+        </div> 
+    </div>
+    </main>
 </div>
 {% endblock content %}
