--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
           width: 100%;
           margin: 0;
           padding: 0;
+          scroll-behavior: smooth;
       }
       body {
           height: 100%;
