--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="{% static '25-27s-logo.png' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>
-      25 & 27 
+      25 & 27s
       {% block title %}
       {% endblock title %}
     </title>
@@ -25,7 +25,7 @@
           padding: 0;
       }
       body {
-          height: 100%;
+          position: relative;
           width: 100%;
           margin: 0;
           padding: 0;
@@ -39,16 +39,13 @@
     </style>
   </head>
   <body>
-    <div class="container-fluid" style="padding: 0;">
-      
     {# 상단 나브바  #}
     {% include 'navbar.html' %}  
-      
+
     {% block content %}{% endblock content %}
-    
-    </div>
+
+    {% block script %}{% endblock script %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
   </body>
-  {% block script %}{% endblock script %}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
