--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-white sticky-top shadow-sm px-3 py-2 rounded-2">
+<nav class="navbar bg-white sticky-top shadow-sm px-3 py-2 rounded-bottom-2">
   <div class="container-fluid d-flex justify-content-between">
     <a class="navbar-brand" href="{% url 'stores:index' %}">
       <img src="https://d1.awsstatic.com/logos/customers/KO/logo_Mangoplate.12908c5b9952bc4f14bdc966e5e81b521415fc6a.png" style="width: 4rem; height: 1.5rem;">
