--- a/stores/templates/stores/all_stores.html
+++ b/stores/templates/stores/all_stores.html
@@ -13,7 +13,7 @@
   <section class="food-thumbnail-section border-bottom">
 
     <div class="all-likes">
-      <a href="{% url '' %}" class="text-dark">가고 싶다</a>
+      <a href="#" class="text-dark">가고 싶다</a>
     </div>
       
 
