--- a/stores/templates/stores/search.html
+++ b/stores/templates/stores/search.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}      
 {% block content %}
-<div class="container-fluid mt-5">
+<div class="container mt-5">
     {% if search %}
-    <header>
-        <h1 class="mt-5 text-center"> 검색하신 "{{ search }}" 맛집 정보입니다. </h1>
-    </header>  
-    <br>
     <main>
     <div class="container">
-        <div class="row">
+        <div class="container">
+            <h1 class="mt-5"> 검색하신 "{{ search }}" 맛집 정보입니다. </h1>
+        </div>
+        <div class="row mt-5">
             {% for store in store %}
             <div class="col">
                 {% if store.image %}
