--- a/reviews/templates/reviews/create.html
+++ b/reviews/templates/reviews/create.html
@@ -7,7 +7,8 @@
   <h2>리뷰 작성</h2>
   <form action="{% url 'reviews:create' store_pk %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ review_form.as_p }}
+    {{ review_image_form.as_p }}
     <input type="submit" value="저장">
   </form>
 </div>
