Add store-like ajax

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
       <img src="https://d1.awsstatic.com/logos/customers/KO/logo_Mangoplate.12908c5b9952bc4f14bdc966e5e81b521415fc6a.png" style="width: 4rem; height: 1.5rem;">
     </a>
     <div class="d-flex">
-        <a href="#" class="btn me-3 d-flex" role="button" style="font-size: xx-large;">EAT딜</a>
+        <a href="{% url 'stores:all_stores' %}" class="btn me-3 d-flex" role="button" style="font-size: xx-large;">모든 가게</a>
         <a href="#" class="btn me-3 d-flex" role="button" style="font-size: xx-large;">맛집 리스트</a>
         <a href="#" class="btn me-3 d-flex" role="button" style="font-size: xx-large;">망고 스토리</a>
         <div class="dropdown py-2">
