--- a/stores/templates/stores/detail.html
+++ b/stores/templates/stores/detail.html
@@ -54,26 +54,16 @@
                     </div>
                     <div class="col-sm-4">
                       <div class="row">
-                        <form action="{% url 'stores:like_stores' store.pk %}" method='POST'>
+                        <form class="like-forms" data-store-id={{ store.pk }}>
                           {% csrf_token %}
-                          {% if request.user in store.like_users.all %}
-                          <button class='bg-transparent border-0'>
-                            <svg xmlns="http://www.w3.org/2000/svg" style='width: 3rem;' fill="orange" class="bi bi-star-fill" viewBox="0 0 16 16">
-                              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                            </svg>
-                            <p class='mt-2'>즐겨찾기</p>
+                          <button id="like-{{ store.pk }}" class='bg-transparent border-0'>
+                            {% if request.user in store.like_users.all %}
+                            <i class="bi bi-star-fill text-orange fs-1"></i>
+                            {% else %}
+                            <i class="bi bi-star fs-1"></i>
+                            {% endif %}
+                            <p class=''>즐겨찾기</p>
                           </button>
-                          {% else %}
-                          <button class='bg-transparent border-0'>
-                            <svg xmlns="http://www.w3.org/2000/svg" style='width: 3rem;' stroke-width='0.5' fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-                              <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-                            </svg>
-                            {% comment %} <a href="#" class="text-decoration-none btn" style="width: 5rem;">
-                              <img src="https://static.vecteezy.com/system/resources/thumbnails/000/456/464/small/15_-_1_-_Star.jpg" style="width: 3rem;">
-                            </a> {% endcomment %}
-                            <p class='mt-2'>즐겨찾기</p>
-                          </button>
-                          {% endif %}
                         </form>
 
                       </div>
@@ -204,10 +194,13 @@
 
 
 {% block script %}
+{# ajax cdn #}
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 {# APIKEY 숨기기는 React 권장 #}
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=afbeb49e64cb240112a667970ea3d85f"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=afbeb49e64cb240112a667970ea3d85f&libraries=services,clusterer,drawing"></script>
 <script>
+  // Kakao Map
   const mapLat = document.getElementById('lat').textContent
   const mapLng = document.getElementById('lng').textContent
 
@@ -232,5 +225,40 @@
   
     marker.setMap(map)
   }
+
+  // 비동기 즐겨찾기
+  const forms = document.querySelectorAll('.like-forms')
+  const csrftoken = document.querySelector('.like-forms>[name=csrfmiddlewaretoken]').value
+
+  forms.forEach((form) => {
+    form.addEventListener('submit', (event) => {
+      event.preventDefault()
+      const storeId = event.target.dataset.storeId
+      
+      axios({
+        method: 'post',
+        url: `/stores/${storeId}/like-stores/`,
+        headers: {'X-CSRFToken': csrftoken,},
+      })
+      .then((response) => {
+        const isLiked = response.data.is_liked
+        const likeBtn = document.querySelector(`#like-${storeId}`)
+        const iTag = document.querySelector(`#like-${storeId}>i`)
+        
+        console.log(iTag)
+        if (isLiked) {
+          iTag.classList.replace('bi-star', 'bi-star-fill')
+          iTag.classList.add('text-orange')
+        } else {
+          iTag.classList.replace('bi-star-fill', 'bi-star')
+          iTag.classList.remove('text-orange')
+        }
+        console.log(iTag)
+      })
+      .catch((error) => {
+        console.log(error.response)
+      })
+      })
+    })
 </script>
 {% endblock script %}
