Update page title

--- a/stores/templates/stores/create.html
+++ b/stores/templates/stores/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %}25 & 27 - 가게 등록{% endblock title %}
+{% block title %} - 가게 등록{% endblock title %}
 
 {% block style %}
 
