--- a/stores/templates/stores/search.html
+++ b/stores/templates/stores/search.html
@@ -9,7 +9,8 @@
 </header>
 
 <main class="container d-flex flex-column align-items-center">
-  {% for store in stores %}
+    {% if search %}
+  {% for store in store %}
   <section class="food-thumbnail-section border-bottom">
 
     <div class="all-likes">
@@ -59,6 +60,18 @@
 
   </section>
   {% endfor %}
+  {% else %}        
+            <h1> 찾고 있는 맛집 정보가 존재하지 않습니다. </h1>
+    {% endif %}
+
+
+    {% for review in reviews %}
+        {{ review.content }}
+        {{ review.rating }}
+        {{ review.store.name }}
+    {% endfor %}
+
+
 </main>
 {% endblock content %}
 
